# volteraspubquiz

./: .gitignore  LICENSE  README.md  Taskfile.yml
.ai/helpers/: architecture-decision.md
apps/client/: .env  Taskfile.yml  auto-imports.d.ts  eslint.config.js  package.json  panda.config.ts  park-ui.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
apps/server/: .env  Taskfile.yml  docker-compose.yml  pyproject.toml
apps/server/src/: database.py  init_db.py  main.py
apps/server/src/vehicle_data/controllers/: vehicle_data.py
apps/server/src/vehicle_data/domain/: paginated_response.py  vehicle.py  vehicle_data.py
apps/server/src/vehicle_data/repositories/: init_db.py  vehicle_repository.py
apps/server/src/vehicle_data/schemas/: vehicle.py  vehicle_data.py
apps/server/src/vehicle_data/services/: fake_date_helper.py  vehicle.py  vehicle_data.py
apps/server/tests/: conftest.py
apps/server/tests/vehicle_data/domain/: test_fake_date_helper.py  test_vehicle_data_model.py  test_vehicle_model.py
apps/server/tests/vehicle_data/repositories/: test_vehicle_repository.py
apps/server/tests/vehicle_data/services/: test_vehicle_data_service.py  test_vehicle_service.py
documentation/: Roadmap.md
documentation/ADRs/: 001 - Decision against monorepo tools.md  002 - Linting and Toolchain Selection.md  003 - Frontend Design System and Architecture Selection.md  004 - Synchronous FastAPI endpoints.md
documentation/volteras_tech_challenge_data/: 06ab31a9-b35d-4e47-8e44-9c35feb1bfae.csv  (+2 more)
(+43 files in other folders)
