[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Zac Braddy",email = "zacharybraddy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "faker (>=37.3.0,<38.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pydantic-extra-types (>=2.10.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]
virtualenvs.in-project = true

[tool.poetry]
packages = [{include = "server", from = "src"}]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py311']
